multiple small changes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.0",
+    "formidable": "^1.2.2",
     "mongoose": "^5.9.7",
     "uuid": "^7.0.3"
   }
