--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/spencerdenford/WebAppDev#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "connect-busboy": "0.0.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.0",
     "formidable": "^1.2.2",
+    "fs-extra": "^9.0.0",
     "mongoose": "^5.9.7",
     "uuid": "^7.0.3"
   }
